# ej_rest_webapp_ventas/backend/docs/swagger.yaml
@@ -132,6 +132,48 @@ definitions:
       mobilePhone:
         type: string
     type: object
+  order.OrderDetailItem:
+    properties:
+      id:
+        type: integer
+      order_id:
+        type: integer
+      product_id:
+        type: integer
+      product_name:
+        type: string
+      quantity:
+        type: number
+      unit_price:
+        type: number
+    type: object
+  order.OrderItem:
+    properties:
+      address:
+        type: string
+      city:
+        type: string
+      company:
+        type: string
+      customer:
+        type: string
+      customerId:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/order.OrderDetailItem'
+        type: array
+      orderDate:
+        type: string
+      orderId:
+        type: integer
+      phone:
+        type: string
+      statusId:
+        type: string
+      statusName:
+        type: string
+    type: object
   product.Product:
     properties:
       category:
@@ -360,6 +402,26 @@ paths:
       summary: Lista de Empleados
       tags:
       - Employees
+  /orders/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Order Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/order.OrderItem'
+      summary: Order by Id
+      tags:
+      - Orders
   /products/:
     post:
       consumes:
